tech: refactor app router uses router config

--- a/doc/01.md
+++ b/doc/01.md
@@ -109,10 +109,10 @@
 ```
 /shared
     /contexts
-        /theme-context
+        /themeContext
             ThemeContext.tsx (тут мнения разошлись что в этом же файле надо добавить и провайдер, я оставил раздельно)
             ThemeProvider.tsx
             useTheme.tsx
-            index.ts (theme-context Public API)
+            index.ts (themeContext Public API)
         index.ts (contexts Public API)
 ```
