docs: extends documentation

--- a/doc/02.md
+++ b/doc/02.md
@@ -24,6 +24,17 @@
      <image src="02_011_router_fsd.jpg" width="640" alt="Dependency Inversion">
 
 ### <p id="02_012">Navbar. Шаблоны для разработки. Первый UI Kit компонент</p>
+1. refactor `Navbar` according `FSD` (move to the `widgets` layer)
+2. add styles for `Navbar`
+3. add snippet for standard `React.FC` component (WS -> Live templates -> user)
+   - `$FILE$` - `fileNameWithoutExtension()`
+   - `$DECAPITALIZE_FILE$` - `decapitalize(FILE)`
+4. add `css-variables` for `size`
+5. add custom component `AppLink` to the layer `shared` -> `ui` (этот сегмент используется для `ui-kit`)
+6. according to the `LIP` from `SOLID`, use inheritance of the basic interface `LinkProps` and `rest`/`spread` operators to pass `{...restProps}` to the basic component `<Link />`
+7. add styles for `AppLink`
+8. add `css-theme` for `ui-kit` (for instance - `AppLink`)
+
 ### <p id="02_013">Svg-loader. File-loader. Button UI-kit</p>
 ### <p id="02_014">Sidebar. Layout приложения</p>
 ### <p id="02_015">i18n интернационализация. Define plugin. Плагин для переводов</p>
