docs: extends documentation

--- a/doc/02.md
+++ b/doc/02.md
@@ -36,7 +36,21 @@
 8. add `css-theme` for `ui-kit` (for instance - `AppLink`)
 
 ### <p id="02_013">Svg-loader. File-loader. Button UI-kit</p>
+1. according to the `FSD`, replace toggle theme button to the `shared` layer
+2. import `svg` to the `shared/assets` layers
+3. `webpackConfig` -> `buildLoaders` - add `svgLoader` (преобразовывает `svg-файлы` в `react-компоненты`)
+4. `webpackConfig` -> `buildLoaders` - add `fileLoader` (for `*.png`, `*.jpg`, `*.gif`, `*.woff2`, `*.woff` ...)
+5. declare module `"*.svg"` in the `global.d.ts` (for `TS`)
+6. create custom component `Button` (in `shared/ui` layer) and set custom styles to it
+   - add `ThemeButton`
+   - **!!!!!** use `LIP` from `SOLID`
+7. replaces `ThemeSwitcher` to the `feature FSD-layer` (cross-import is restricted at the same `widgets` layer)
+
 ### <p id="02_014">Sidebar. Layout приложения</p>
+1. add `SideBar` to the `widget` layer
+2. add styles for main page wrapper; add css-variables for `SideBar` width
+3. replace `ThemeSwitcher` to the `SideBar` (we'll add `LanguageSwitcher` there later)
+
 ### <p id="02_015">i18n интернационализация. Define plugin. Плагин для переводов</p>
 ### <p id="02_016">Webpack hot module replacement</p>
 ### <p id="02_017">Babel. Extract plugin</p>
