docs: extends documentation

--- a/doc/02.md
+++ b/doc/02.md
@@ -52,6 +52,19 @@
 3. replace `ThemeSwitcher` to the `SideBar` (we'll add `LanguageSwitcher` there later)
 
 ### <p id="02_015">i18n интернационализация. Define plugin. Плагин для переводов</p>
+1. `webpack` -> `buildPlugins` -> `DefinePlugin` -> use global variable
+   - tech: add `webpack.DefinePlugin` and declare global variable `__IS_DEV__`
+2. define global constant in the `global.d.ts`
+3. install `react-i18next` -> add config to the `shared/configs/i18n`
+4. wrap all `App` by `<Suspense/>` and test `useTransition` hook
+   tech: wrap all App globally by <Suspense> (for async loading dictionaries)
+5. add translations in the `public/locales` folder
+6. split translations for each language into chunks
+7. split dictionaries loading by namespaces (Pages)
+8. create `LanguageSwitcher` component, add `LanguageSwitcher` into `SideBar` switchers block
+9. add `LanguageSwitcher`'s styles
+10. `Webstorm` plugin `i18n support` for auto create translation's keys
+
 ### <p id="02_016">Webpack hot module replacement</p>
 ### <p id="02_017">Babel. Extract plugin</p>
 ### <p id="02_018">Настраиваем EsLint. Исправляем ошибки</p>
