docs: extends documentation

--- a/doc/02.md
+++ b/doc/02.md
@@ -66,6 +66,11 @@
 10. `Webstorm` plugin `i18n support` for auto create translation's keys
 
 ### <p id="02_016">Webpack hot module replacement</p>
+1. `HotModuleReplacementPlugin` - позволяет обновлять код без перезагрузки страницы. Удобно при разработке, например, модалок - код обновили, но страница не перезагрузилась и модалка осталась открытой с той же информацией что и было
+2. `webpackConfig` -> `buildDevServer` -> `hot: true`
+3. `webpackConfig` -> `buildPlugins` -> add `HotModuleReplacementPlugin`
+4. add `ReactRefreshWebpackPlugin` (`@pmmmwh/react-refresh-webpack-plugin`). Установленный на предыдущем этапе `HotModuleReplacementPlugin` не очень стабильно работает с React-компонентами, поэтому добавляем еще второй плагин
+
 ### <p id="02_017">Babel. Extract plugin</p>
 ### <p id="02_018">Настраиваем EsLint. Исправляем ошибки</p>
 ### <p id="02_019">Stylelint. Plugin for i18next</p>
