tech: install babel-plugin-i18next-extract and configure it

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,4 @@
 {
-  "Welcome to React": "Welcome to React",
-  "Language": "Русский"
+  "Language": "Русский",
+  "Welcome to React": "Welcome to React"
 }
