--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,4 @@
 {
-  "Welcome to React": "Добро пожаловать в React",
-  "Language": "Английский"
+  "Language": "Английский",
+  "Welcome to React": "Добро пожаловать в React"
 }
