docs: extends documentation

--- a/doc/02.md
+++ b/doc/02.md
@@ -72,6 +72,12 @@
 4. add `ReactRefreshWebpackPlugin` (`@pmmmwh/react-refresh-webpack-plugin`). Установленный на предыдущем этапе `HotModuleReplacementPlugin` не очень стабильно работает с React-компонентами, поэтому добавляем еще второй плагин
 
 ### <p id="02_017">Babel. Extract plugin</p>
+1. `babel-plugin-i18next-extract` - `babel` плагин для библиотеки `i18next`, который позволяет автоматически при сборке вытаскивать ключи для перевода в отдельный файл
+2. `babel` - транспилятор, который преобразует код из одних стандартов в другие стандарты
+3. install `babel-loader`, `babel-core` and configure `webpackConfig` -> `buildLoaders` -> add `babelLoader`
+4. install `@babel/preset-env` для преобразования `EcmaScript 6` в старые стандарты + configure `babel.config.js` (если бы мы не использовали `TS`, нам бы все равно пришлось использовать babel для работы с `react` - `@babel/preset-react`)
+5. install `babel-plugin-i18next-extract` and configure `babel.config.js`
+
 ### <p id="02_018">Настраиваем EsLint. Исправляем ошибки</p>
 ### <p id="02_019">Stylelint. Plugin for i18next</p>
 ### <p id="02_020">Тестовая среда. Настраиваем Jest. Пишем первый тест</p>
