docs: extends documentation

--- a/doc/02.md
+++ b/doc/02.md
@@ -79,6 +79,67 @@
 5. install `babel-plugin-i18next-extract` and configure `babel.config.js`
 
 ### <p id="02_018">Настраиваем EsLint. Исправляем ошибки</p>
+1. run `npm init @eslint/config` (configure and install all dependencies)
+   - To check syntax, find problems, and enforce code style
+   - JavaScript modules (import/export)
+   - React
+   - Does your project use TypeScript? » `Yes`
+   - Where does your code run? » `Browser`
+   - How would you like to define a style for your project? » `Use a popular style guide` » `Standard`
+   - What format do you want your config file to be in? » `JavaScript`
+   - Would you like to install them now? » `Yes`
+   - Which package manager do you want to use? » `npm`
+2. uninstall: `npm uninstall eslint-config-standard-with-typescript @typescript-eslint/eslint-plugin`
+3. install & configure: `npm i -D eslint-config-airbnb eslint-plugin-jsx-a11y eslint-plugin-react-hooks`
+   - заменить: `extends: ['standard-with-typescript']` -> `extends: ['airbnb']`
+4. install & configure: `npm i -D eslint-config-airbnb-typescript @typescript-eslint/eslint-plugin @typescript-eslint/parser`
+   ```js
+   {
+       "extends": ['airbnb-typescript']
+   }
+   
+   {
+      "parserOptions": {
+        "project": './tsconfig.json'
+   }
+   ```
+5. configure: `eslint-plugin-n`
+   ```js
+   {
+      "extends": ["plugin:n/recommended"]
+   }
+   
+   {
+      "rules": {
+        "n/exports-style": ["error", "module.exports"]
+      }
+   }
+   ```
+6. configure: `eslint-plugin-promise`
+   ```js
+   {
+       "extends": ["plugin:promise/recommended"]
+   }
+   
+   {
+       "plugins": ["promise"]
+   }
+   ```
+7. install & configure: `npm i -D eslint-plugin-i18next`
+```js
+   {
+       "extends": ["plugin:i18next/recommended"]
+   }
+   
+   {
+       "plugins": ["i18next"]
+   }
+```
+8. turn on Eslint plugin in Webstorm
+   `WB` -> `ESLint` -> `Automatic ESLint configuration` & `Run eslint --fix on save`
+9. add `package.json` scripts - `lint:ts`, `lint:ts:fix`
+10. configure `eslint.globals`
+
 ### <p id="02_019">Stylelint. Plugin for i18next</p>
 ### <p id="02_020">Тестовая среда. Настраиваем Jest. Пишем первый тест</p>
 ### <p id="02_021">Несуществующие маршруты. Лоадер для загрузки страниц</p>
