docs: extends documentation

--- a/doc/02.md
+++ b/doc/02.md
@@ -141,6 +141,12 @@
 10. configure `eslint.globals`
 
 ### <p id="02_019">Stylelint. Plugin for i18next</p>
+1. install `stylelint` with config for `TS` + create `stylelintrs.json` + add `npm-scripts` `lint:scss` & `lint:scss:fix`
+2. turn on `Stylelint` in `Webstorm`
+   `WS` -> `Settings` -> `Style Sheets` -> `Stylelint` -> `Enable`, `Run fo files scss`
+3. add `stylelint-config-recess-order`
+4. add rule for `eslint-plugin-i18next`
+
 ### <p id="02_020">Тестовая среда. Настраиваем Jest. Пишем первый тест</p>
 ### <p id="02_021">Несуществующие маршруты. Лоадер для загрузки страниц</p>
 ### <p id="02_022">Дополнение к модулю</p>
