docs: extends documentation

--- a/doc/02.md
+++ b/doc/02.md
@@ -148,6 +148,35 @@
 4. add rule for `eslint-plugin-i18next`
 
 ### <p id="02_020">Тестовая среда. Настраиваем Jest. Пишем первый тест</p>
+1. install `Jest`; `jest --init` -> move `jest.config` to `/config/jest` folder
+   - Would you like to use Jest when running "test" script in "package.json"? -> `yes`
+   - Would you like to use Typescript for the configuration file? -> `yes`
+   - Choose the test environment that will be used for testing -> `jsdom (browser-like)`
+   - Do you want Jest to add coverage reports? -> `no`
+   - Which provider should be used to instrument code for coverage? -> `babel`
+   - Automatically clear mock calls, instances, contexts and results before every test? -> `yes`
+2. configure `npm-script` `unit` in `package.json` - add flag with path to config `--config`
+3. install types: `npm i --save-dev @types/jest`
+4. configure `.eslintrs.js` for use Jest
+   ```js
+   {
+      'env': {
+       'jest': true
+      }
+   }
+   ```
+5. install: `npm i -D jest-environment-jsdom` (from Jest 28 it doesn't delivered from box)
+6. configure `Jest` to work with `TS` via `Babel`
+   - `npm install --save-dev @babel/preset-typescript`
+   - configure `babel.config.js`
+   ```js
+   {
+       "presets": ["@babel/preset-typescript"]
+   }
+   ```
+7. configure `Jest` to work with `absolute imports`
+   - `modulePaths: ['<rootDir>src/']`
+
 ### <p id="02_021">Несуществующие маршруты. Лоадер для загрузки страниц</p>
 ### <p id="02_022">Дополнение к модулю</p>
 
