feat: implement NotFoundPage, route for new page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,8 @@
 {
   "About page": "About us",
   "Language": "Русский",
+  "Loading": "Loading",
   "Main page": "Main page",
-  "Toggle": "Toggle",
-  "Welcome to React": "Welcome to React"
+  "Not Found Page": "Not Found Page",
+  "Toggle": "Toggle"
 }
