--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,7 +1,8 @@
 {
   "About page": "О сайте",
   "Language": "English",
+  "Loading": "Загрузка",
   "Main page": "Главная страница",
-  "Toggle": "Переключить",
-  "Welcome to React": "Добро пожаловать в React"
+  "Not Found Page": "Страница не найдена",
+  "Toggle": "Переключить"
 }
