docs: extends documentation

--- a/doc/02.md
+++ b/doc/02.md
@@ -178,5 +178,8 @@
    - `modulePaths: ['<rootDir>src/']`
 
 ### <p id="02_021">Несуществующие маршруты. Лоадер для загрузки страниц</p>
-### <p id="02_022">Дополнение к модулю</p>
-
+1. implement `NotFoundPage.tsx`
+2. add route for new page
+3. add `PageLoader` component (according `FSD` - to the `widgets` layer) and use it in asyncImports as `fallback`
+4. add theme colors for `PageLoader spinner`
+5. decompose `PageLoader` into two components: `PageLoader` (`widgets` layer, only for displaying during a page is loading) and `Loader` (`shared` layer, reusable)
